--- a/templates/tree.html
+++ b/templates/tree.html
@@ -70,7 +70,7 @@
             width = 1200 - margin.right - margin.left,
             height = 2500 - margin.top - margin.bottom;
 
-        var i = 0;
+        var i = 0, duration = 750;
 
         var tree = d3.layout.tree()
             .size([height, width]);
@@ -88,7 +88,7 @@
         root = treeData[0];
 
         update(root);
-
+        addlink(root);
         function update(source) {
 
             // Compute the new tree layout.
@@ -120,7 +120,8 @@
                 .attr("class", "node")
                 .attr("transform", function (d) {
                     return "translate(" + d.y + "," + d.x + ")";
-                });
+                })
+                .on("click", click);
 
             nodeEnter.append("circle")
                 .attr("r", function (d) {
@@ -173,7 +174,97 @@
                 .attr("d", function (d) {
                     return line([d.source, d.target]);
                 });
-            console.log(children.length);
+
+
+            var nodeUpdate = node.transition()
+                .duration(duration)
+                .attr("transform", function (d) {
+                    return "translate(" + d.y + "," + d.x + ")";
+                });
+
+            nodeUpdate.select("circle")
+                .attr("r", function (d) {
+                    return d.children || d._children ? 5 : 10;
+                })
+                .style("stroke", function (d) {
+                    return d.children || d._children ? d.type : 'blue';
+                })
+                .style("fill", function (d) {
+                    return d.level;
+                });
+
+
+            nodeUpdate.select("text")
+                .attr("y", function (d) {
+                    return -18;
+                })
+                .attr("dy", ".35em")
+                .attr("text-anchor", "middle")
+                .text(function (d) {
+                    return d.children || d._children ? d.name : null;
+                })
+                .style("fill-opacity", 1);
+
+            var nodeExit = node.exit().transition()
+                .duration(duration)
+                .attr("transform", function (d) {
+                    return "translate(" + source.y + "," + source.x + ")";
+                })
+                .remove();
+
+            nodeExit.select("circle")
+                .attr("r", function (d) {
+                    return d.children || d._children ? 0 : 10;
+                })
+                .style("stroke", function (d) {
+                    return d.level;
+                })
+                .style("fill", function (d) {
+                    return d.level;
+                });
+
+            nodeExit.select("text")
+                .attr("y", function (d) {
+                    return -18;
+                })
+                .attr("dy", ".35em")
+                .attr("text-anchor", "middle")
+                .text(function (d) {
+                    return d.children || d._children ? d.name : null;
+                })
+                .style("fill-opacity", 1);
+
+            // Transition links to their new position.
+            link.transition()
+                .duration(duration)
+                .attr("d", function (d) {
+                    return line([d.source, d.target]);
+                });
+
+            // Transition exiting nodes to the parent's new position.
+            link.exit().transition()
+                .duration(duration)
+                .attr("d", function (d) {
+                    var o = {x: source.x, y: source.y};
+                    return line({source: o, target: o});
+                })
+                .remove();
+
+
+        }
+
+        function click(d) {
+            if (d.children) {
+                d._children = d.children;
+                d.children = null;
+            } else {
+                d.children = d._children;
+                d._children = null;
+            }
+            update(d);
+        }
+
+        function addlink() {
             for (var i = 0; i < children.length; i++) {
                 console.log(children[i]["y_value"]);
                 var textList = svg.append("a")
@@ -192,10 +283,6 @@
             }
         }
     </script>
-
-
-
-
 {% endblock %}
 
 	
