--- a/templates/subfamily.html
+++ b/templates/subfamily.html
@@ -10,19 +10,7 @@
         </div>
     </div>
     <!-- Main Content Area-->
-    <div class="familyList">
-        <h1>
-            Family List
-        </h1>
-        <ul class="breadcrumb" style="font-size: medium">
-            {% for i in range(40) %}
-                <li><a href="{{ url_for('family', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
-                </li>
-            {% endfor %}
-
-        </ul>
-    </div>
-    <div class="familyInformation">
+    <div class="SubfamilyInformation">
         <h1>Family Information</h1>
         <p style="font-size: medium">Family (Latin: familia, plural familiae) is one of the eight major hierarchical
             taxonomic ranks in Linnaean taxonomy; it is classified between order and genus. A family may be divided into
@@ -30,20 +18,7 @@
             are Latin in origin; however, popular names are often used: for example, walnut trees and hickory trees
             belong to the family Juglandaceae, but that family is commonly referred to as being the "walnut family".</p>
     </div>
-    {% if family_id != 'all' %}
-        <div class="subFamily">
-            <h1>Subfamily</h1>
-            <ul class="breadcrumb" style="font-size: medium">
-                {% for i in range(40) %}
-                    {% set family_id = (i + 1) / 10 + 1 %}
-                    <li><a href="{{ url_for('subfamily', family_id = family_id) }}">{{ family_id }}</a> <span
-                            class="divider"></span>
-                    </li>
-                {% endfor %}
 
-            </ul>
-        </div>
-    {% endif %}
     <div class="familyResource">
         <h1>Family Resource</h1>
         <ul class="breadcrumb" style="font-size: medium">
