--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -58,7 +58,7 @@
                     <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
                 </td>
                 <td>
-                    <p hidden>>{{ record.uniq_id }} {{ record.protein_name }} OS={{ record.strain }}</p>
+                    <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme  }} OS={{ record.strain }}</p>
                     <p hidden style="max-width: 40ch; word-wrap:break-word;"> {{ record.seq }}</p>
                 </td>
             </tr>
