--- a/templates/network.html
+++ b/templates/network.html
@@ -82,7 +82,7 @@
                     {
                         selector: 'node',
                         style: {
-                            'background-color': 'data(color)',
+                            'background-color': 'red',
                             'label': 'data(name)'
                         }
                     }
