add color in nodes

--- a/templates/network.html
+++ b/templates/network.html
@@ -82,7 +82,7 @@
                     {
                         selector: 'node',
                         style: {
-                            'background-color': 'red',
+                            'background-color': 'data(fill_color)',
                             'label': 'data(name)'
                         }
                     }
