--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -2,8 +2,7 @@
 	<hr>
 	<div class="row">
 		<div class="col-lg-12">
-			<p class="text-center">&copy; 2020 <a href = "index.html">YinchaoHe</a></p>
-			<p class="text-center"><a href="mailto:yhe@huskers.unl.edu">Email</a> | <a href="yhe@huskers.unl.edu">GitHub</a></p>
+			<p class="text-center">Copyright 2020 &copy; <a href="https://www.unl.edu/">UNL</a>. All rights reserved. Handcoded by <a href="mailto:yhe@huskers.unl.edu">Yinchao He</a> &amp; <a href="mailto:pengxiangzhang@huskers.unl.edu">Pengxiang Zhang</a></p>
 		</div>
 	</div>
 </div>
