--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="utf-8">
     <title>{{ config['title'] }}</title>
+    <link rel="icon" href="/static/favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
@@ -47,5 +48,14 @@
             margin-right: 1em;
         }
     </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162166787-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+ gtag('config', 'UA-162166787-4');
+</script>
 
 </head>
