Add fancyapps to control the desplay of the tree

--- a/templates/_head.html
+++ b/templates/_head.html
@@ -58,4 +58,7 @@
  gtag('config', 'UA-162166787-4');
 </script>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
 </head>
