--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -2,6 +2,7 @@
 	<div class="container-fluid">
 		<ul class="nav navbar-nav">
 			<li><a href="/">Home</a></li>
+            <li><a href="/classes/all">Class</a></li>
             <li><a href="/family/all">Family</a></li>
 			<li><a href="/characteristic/all">Evidence</a></li>
             <li><a href="/swissport/all">Swiss-Prot</a></li>
