--- a/templates/index.html
+++ b/templates/index.html
@@ -12,28 +12,28 @@
     </div>
     <div class="familyList">
         <h1>
-            Family List
+            Class List
         </h1>
         <ul class="breadcrumb" style="font-size: medium">
-            <li><a href="{{ url_for('family', family_id = 'ORs') }}">ORs</a> <span
+            <li><a href="{{ url_for('classes', class_id = 'ORs') }}">ORs</a> <span
                     class="divider"></span>
             </li>
-            <li><a href="{{ url_for('family', family_id = 'FRs') }}">FRs</a> <span
+            <li><a href="{{ url_for('classes', class_id = 'FRs') }}">FRs</a> <span
                     class="divider"></span>
             </li>
-            <li><a href="{{ url_for('family', family_id = 'HRs') }}">HRs</a> <span
+            <li><a href="{{ url_for('classes', class_id = 'HRs') }}">HRs</a> <span
                     class="divider"></span>
             </li>
-            <li><a href="{{ url_for('family', family_id = 'NCRs') }}">NCRs</a> <span
+            <li><a href="{{ url_for('classes', class_id = 'NCRs') }}">NCRs</a> <span
                     class="divider"></span>
             </li>
-            <li><a href="{{ url_for('family', family_id = 'IRs') }}">IRs</a> <span
+            <li><a href="{{ url_for('classes', class_id = 'IRs') }}">IRs</a> <span
                     class="divider"></span>
             </li>
-            <li><a href="{{ url_for('family', family_id = 'SRs') }}">SRs</a> <span
+            <li><a href="{{ url_for('classes', class_id = 'SRs') }}">SRs</a> <span
                     class="divider"></span>
             </li>
-            <li><a href="{{ url_for('family', family_id = 'TRs') }}">TRs</a> <span
+            <li><a href="{{ url_for('classes', class_id = 'TRs') }}">TRs</a> <span
                     class="divider"></span>
             </li>
         </ul>
