--- a/templates/network.html
+++ b/templates/network.html
@@ -44,11 +44,12 @@
     <script>
         var networkData = JSON.parse({{networkData|tojson|safe}});
         networkData['elements']['nodes'].forEach(node => {
+            print(node['data']['id'])
             node['data']['id'] = node['data'][0];
-            node['data']['node'] = node['data'][1];
+            node['data']['color'] = node['data'][1];
             node['data']['name'] = node['data'][2];
             node['data']['href'] = node['data'][3];
-
+            print()
         });
         drawing(networkData);
 
@@ -95,7 +96,7 @@
                     {
                         selector: 'node',
                         style: {
-                            'background-color': 'data(fill_color)',
+                            'background-color': 'data(color)',
                             'label': 'data(name)'
                         }
                     },
