--- a/templates/network.html
+++ b/templates/network.html
@@ -56,6 +56,7 @@
                 type: "post",
                 url: url,
                 data: term,
+                dataType: "json",
                 success: function (msg) {
                     drawing(msg);
                 },
