--- a/templates/network.html
+++ b/templates/network.html
@@ -95,7 +95,7 @@
                     {
                         selector: 'node',
                         style: {
-                            'background-color': 'data(color)',
+                            'background-color': 'data(fill_color)',
                             'label': 'data(name)'
                         }
                     },
