--- a/templates/_head.html
+++ b/templates/_head.html
@@ -47,6 +47,18 @@
             margin-left: 1em;
             margin-right: 1em;
         }
+	.container-wrap {
+	    white-space: nowrap;
+	    overflow: hidden;
+	    overflow-x: scroll; /* 1 */
+	    -webkit-backface-visibility: hidden;
+	    -webkit-perspective: 1000;
+	    -webkit-overflow-scrolling: touch; /* 2 */
+	    text-align: justify; /* 3 */
+	    &::-webkit-scrollbar {
+	        display: none;
+	    }
+	}
     </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162166787-4"></script>
