--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -37,7 +37,6 @@
         <tr>
             <th>Protein Name</th>
             <th>Strain</th>
-            <th>Gene Name</th>
             <th>Uniprot</th>
             <th>Family</th>
             <th>EC</th>
@@ -50,15 +49,18 @@
             <tr>
                 <td>{{ record.protein_enzyme }}</td>
                 <td>{{ record.strain }}</td>
-                <td>{{ record.gene_name }}</td>
                 <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
                 <td>{{ record.family }}</td>
-                <td>{{ record.ec }}</td>
+                {% if record.ec == '-1' %}
+                    <td>{{ ' ' }}</td>
+                {% else %}
+                    <td>{{ record.ec }}</td>
+                {% endif %}
                 <td>
                     <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
                 </td>
                 <td>
-                    <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme  }} OS={{ record.strain }}</p>
+                    <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}</p>
                     <p hidden style="max-width: 40ch; word-wrap:break-word;"> {{ record.seq }}</p>
                 </td>
             </tr>
