--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -17,8 +17,11 @@
 
 <!-- Links -->
 <ul class="nav navbar-nav">
+    <li class="nav-item">
+    <a class="nav-link" href="/characteristic/all">Evidence</a>
+     </li>
 <li class="dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Class <span class="caret"></span></a>
+<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Class <span class="caret"></span></a>
 <ul class="dropdown-menu" aria-labelledby="about-us">
 <li><a href="https://www.unlbio.ml/classes/ORs">ORs</a></li>
 <li><a href="https://www.unlbio.ml/classes/FRs">FRs</a></li>
