--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -31,7 +31,79 @@
     </div>
 
 
-
+    <script defer type="text/javascript">
+    $(document).ready(function () {
+    $('#data-table').DataTable({
+        lengthMenu: [[ 10, 25, 50, -1 ],[ '10 rows', '25 rows', '50 rows', 'Show all' ]],
+        dom: 'Bfrtip',
+        columnDefs: [{
+        targets: 7,
+        searchable: true,
+        visible: false
+        }],
+        buttons: [
+            {
+                extend: 'csvHtml5',
+                fieldBoundary: '',
+                text: 'export',
+                exportOptions: {
+                    columns: [-1]
+                }
+            },
+            {
+                extend: 'copy',
+                fieldBoundary: '',
+                text: 'copy',
+                exportOptions: {
+                    columns: [-1]
+                }
+            },
+            {
+                text: 'All',
+                action: function () {
+                    location.reload(true);
+                }
+            },
+            {
+                text: 'Bacteria',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Bacteria').draw();
+                }
+            },
+            {
+                text: 'Archaea',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Archaea').draw();
+                }
+            },
+            {
+                text: 'Eukaryota',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Eukaryota').draw();
+                }
+            },
+            {
+                text: 'Viruses',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('Viruses').draw();
+                }
+            },
+            {
+                text: 'Unclassified',
+                action: function () {
+                    var table = $('#data-table').DataTable();
+                    table.column(7).search('unclassified').draw();
+                }
+            },'pageLength'
+        ],
+        select: true
+    });
+});
+    </script>
     <table class="table" id="data-table">
         <thead>
         <tr>
@@ -42,19 +114,20 @@
             <th>EC</th>
             <th>Sequence</th>
             <th hidden></th>
+            <th>type</th>
         </tr>
         </thead>
         <tbody>
         {% for record in records %}
             <tr>
                 <td>{{ record.protein_enzyme }}</td>
-                <td>{{ record.strain }}</td>
+                <td><a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{ record.strain }}</a></td>
                 <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
                 <td>{{ record.family }}</td>
                 {% if record.ec == '-1' %}
                     <td>{{ ' ' }}</td>
                 {% else %}
-                    <td>{{ record.ec }}</td>
+                    <td><a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ record.ec }}">{{ record.ec }}</a></td>
                 {% endif %}
                 <td>
                     <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
@@ -63,8 +136,12 @@
                     <p hidden>>{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}</p>
                     <p hidden style="max-width: 40ch; word-wrap:break-word;"> {{ record.seq }}</p>
                 </td>
+                <td>
+                    <p>{{ record.type }}</p>
+                </td>
             </tr>
         {% endfor %}
+        
         </tbody>
 
     </table>
