small change for tables

--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -42,15 +42,7 @@
                 exportOptions: {
                     columns: [-1]
                 }
-            },
-            {
-                extend: 'copy',
-                fieldBoundary: '',
-                text: 'copy',
-                exportOptions: {
-                    columns: [-1]
-                }
-            },'pageLength'
+            },'copy','pageLength'
         ],
         select: true
     });
