--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -50,14 +50,7 @@
                     columns: [-1]
                 }
             },
-            {
-                extend: 'copy',
-                fieldBoundary: '',
-                text: 'copy',
-                exportOptions: {
-                    columns: [-1]
-                }
-            },
+            'copy',
             {
                 text: 'All',
                 action: function () {
