--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -62,8 +62,8 @@
             <th>Product</th>
             <th>PDB</th>
             <th>Km(uM)</th>
-            <th>Vmax</th>
-            <th>Kcat</th>
+            <th>Vmax(uM/s)</th>
+            <th>Kcat(s<sup>-1</sup>)</th>
             <th>Family</th>
             <th>Sequence</th>
             <th>DOI</th>
