--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -96,17 +96,17 @@
                     </td>
                 {% endif %}
 
-                {% if record.km == -1 %}
+                {% if record.km == '-1' %}
                     <td>{{ ' ' }}</td>
                 {% else %}
                     <td>{{ record.km }}</td>
                 {% endif %}
-                {% if record.vmax == -1 %}
+                {% if record.vmax == '-1' %}
                     <td>{{ ' ' }}</td>
                 {% else %}
                     <td>{{ record.vmax }}</td>
                 {% endif %}
-                {% if record.kcat == -1 %}
+                {% if record.kcat == '-1' %}
                     <td>{{ ' ' }}</td>
                 {% else %}
                     <td>{{ record.kcat }}</td>
