--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -91,7 +91,7 @@
                 {% else %}
                     <td>
                         {% for element in rows[record.number] %}
-                            <a href="https://www.rcsb.org/structure/{{ element[1] }}">{{ element[0] }}</a><br> 
+                            <a href="https://www.rcsb.org/structure/{{ element[1] }}">{{ element[0] }}</a>
                         {% endfor %}
                     </td>
                 {% endif %}
